# LunchHeroes

./: .gitignore  README.md  package-lock.json  pyproject.toml
backend/: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  supabase_client.py
backend/notebooks/: Trial_ML_Clustering.md  Trial_ML_Clustering.qmd
backend/src/: __init__.py
backend/src/db/: dbFetcher.py
backend/src/distance/: __init__.py  _interface.py
backend/src/interface/: __init__.py
backend/src/lunchheros/clustering/: __init__.py  userClustering.py
backend/src/lunchheros/db/: dbFetcher.py
backend/src/lunchheros/distance/: __init__.py  _distances.py  _interface.py  _utils.py
backend/src/lunchheros/interface/: __init__.py
backend/src/match/: __init__.py
backend/tests/db/: test_db.py
backend/tests/distance/: test_distances.py  test_utils.py
backend/tests/match/: test_randomize.py
docker/: Dockerfile  Dockerfile_GitConnect  README.md  gunicorn.conf  nginx.conf
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.js.BASE  App.js.LOCAL  App.js.REMOTE  index.js  setupProxy.js  supabaseclient.js
frontend/src/Components/: Login.js  Navigation.js  Profile.js  ProfileButton.js  Scheduling.js  Scheduling.js.orig  Status.js  openModalButton.js
frontend/src/SCSS/: Login copy.css  Login.css  Profile.css  Status.css  navigation.css  scheduling.css
frontend/src/store/: index.js  scheduling.js  session.js
reactapp/: package-lock.json
reactapp/public/: index.html
(+6 files in other folders)
